# stufio-modules-schedules

./: .gitignore  ARCHITECTURE.md  LICENSE.txt  MODULE_REVIEW.md  OPERATIONS.md  README.md  SCHEDULE_ANALYTICS_COMPLETION_SUMMARY.md  pyproject.toml
stufio/modules/schedules/: __init__.py  config.py  module.py  pyproject.toml  settings.py
stufio/modules/schedules/api/: __init__.py  schedules.py
stufio/modules/schedules/api/routers/: __init__.py  analytics.py  clickhouse_events.py  mongo_schedules.py  monitoring.py  redis_events.py
stufio/modules/schedules/brokers/: stufio_broker.py
stufio/modules/schedules/consumers/: __init__.py  delayed_events.py
stufio/modules/schedules/crud/: __init__.py  crud_clickhouse_scheduled_event.py  crud_mongo_schedule.py  crud_redis_scheduled_event.py  crud_schedule.py  crud_schedule_analytics.py  crud_scheduled_event_definition.py
stufio/modules/schedules/migrations/v20250401/: 01_create_schedule_collection.py  02_create_indexes.py  03_create_scheduled_event_definitions.py  04_create_mongo_schedules.py
stufio/modules/schedules/models/: __init__.py  clickhouse_scheduled_event.py  mongo_schedule.py  redis_scheduled_event.py  schedule.py  schedule_analytics.py  scheduled_event_definition.py
stufio/modules/schedules/schemas/: __init__.py  clickhouse_scheduled_event.py  mongo_schedule.py  redis_scheduled_event.py  schedule.py  schedule_analytics.py  scheduled_event_definition.py
stufio/modules/schedules/services/: analytics_service.py  error_handler.py  scheduler.py  scheduler_service.py  three_tier_scheduler.py
(+3 files in other folders)
