[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stufio-modules-schedules"
version = "0.1.0"
description = "Stufio.com Module: Schuled events support"
authors = [{name = "Ihar Finchuk", email = "if@if.codes"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "stufio>=0.1.0",
    "stufio-modules-events>=0.1.0",
    "croniter>=1.3.0",
    "pytz>=2021.3",
]

[project.urls]
repository = "https://github.com/stufio-com/stufio-modules-schedules"

[tool.setuptools]
package-dir = {"stufio.modules.schedules" = "stufio/modules/schedules"}
packages.find = {include = ["stufio.modules.schedules", "stufio.modules.schedules.*"]}